fixed cropping on issue for gallery.html. Sizing and centering flaws are still present for small screenswq

--- a/photos/static/photos/css/style.css
+++ b/photos/static/photos/css/style.css
@@ -3,12 +3,15 @@ body {
 }
 
 
-
 .nav{
     font-size: 16px;
     font-weight:bold;
+    padding:0;
 }
 
+.container-fluid{
+    background-color:white;
+}
 
 .thumb {
     padding-left: 0;
@@ -18,12 +21,10 @@ body {
 .gallery {
     margin-left:auto;
     margin-right:auto;
-    background-color:yellow;
 }
 .container{
     margin: 0 auto 20px;
     overflow:hidden;
-    background-color:blue;
 }
 
 .crop {
